# rust-dm-spammer

./: Cargo.toml  README.md
src/: main.rs
