[package]
name = "discord-dm-spammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["blocking", "serde_json", "json"] }
colored = "2.0.0"
chrono = "0.4.23"
rand = "0.8.5"
http = "0.2.8"